[project]
name = "oai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flasgger>=0.9.7.1",
    "flask>=3.1.3",
    "flask-jwt-extended>=4.7.1",
    "flask-restful>=0.3.10",
    "pydantic>=2.11.4",
    "pymongo>=4.13.0",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "sqlalchemy>=2.0.48",
]
